# pii-redaction-pipeline

./: .gitignore  Dockerfile  NOTES.md  README.md  SYSTEM_DESIGN.md  main.py  pyproject.toml  requirements.txt
output/audio/train/: F2308F2308_USA_USA_001.flac
output/metadata/: manifest.json
output/qa/: processing_report.json
output/transcripts_deid/train/: F2308F2308_USA_USA_001.json  F2M2_USA_USA_010.json
output/transcripts_raw/train/: F2308F2308_USA_USA_001.json  F2M2_USA_USA_010.json
scripts/: calculate_accuracy.py  download_dataset.py  visualize_results.py
src/: audio_redactor.py  config.py  lexicon.py  pii_detector.py  pipeline.py  text_redactor.py  transcriber.py  verifier.py  wer_calculator.py
tests/: test_audio_redactor.py  test_pii_detector.py
